# marc-lsp

./: MANIFEST.in  README.md  line_parser.py  marc_adapter.py  marc_definitions.py  marc_fixed_fields.py  marc_lookup.py  marc_lsp_server.py  marc_static_data.py  marc_tags.py  mrk_parser.py  pyproject.toml  pyrightconfig.json  server.py  setup.py
data/: marc_bibliographic.json  marc_fixed_fields.json  marc_holdings.json  test_extraction.json
parsers/: __init__.py  line_parser.py  mrk_parser.py
scripts/: generate_marc_data.py
