[project]
name = "marc-lsp-server"
version = "0.1.0"
description = "LSP server for MARC MRK files with syntax highlighting and documentation lookup"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygls>=1.3.0,<2.0.0",
    "requests>=2.25.0,<4.0.0",
    "beautifulsoup4>=4.9.0,<5.0.0",
    "lsprotocol>=2023.0.0,<2025.0.0",
]

[project.scripts]
marc-lsp-server = "marc_lsp_server:main"
