[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marc-lsp-server"
version = "0.1.0"
description = "Language Server Protocol implementation for MARC files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygls>=1.3.0,<2.0.0",
    "lsprotocol>=2023.0.0,<2025.0.0",
]

[project.scripts]
marc-lsp-server = "marc_lsp_server:main"

[tool.setuptools]
py-modules = ["marc_lsp_server", "marc_static_data", "mrk_parser", "line_parser"]
data-files = {"data" = [
    "data/marc_bibliographic.json",
    "data/marc_holdings.json",
    "data/marc_fixed_fields.json",
    "data/test_extraction.json",
]}
